; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_page_tables.c_gpte_to_spte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_page_tables.c_gpte_to_spte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lg_cpu = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@_PAGE_GLOBAL = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"failed to get page %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lg_cpu*, i32, i32)* @gpte_to_spte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpte_to_spte(%struct.lg_cpu* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.lg_cpu*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.lg_cpu* %0, %struct.lg_cpu** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @pte_flags(i32 %10)
  %12 = load i64, i64* @_PAGE_GLOBAL, align 8
  %13 = xor i64 %12, -1
  %14 = and i64 %11, %13
  store i64 %14, i64* %9, align 8
  %15 = load %struct.lg_cpu*, %struct.lg_cpu** %4, align 8
  %16 = getelementptr inbounds %struct.lg_cpu, %struct.lg_cpu* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @PAGE_SIZE, align 8
  %21 = udiv i64 %19, %20
  store i64 %21, i64* %8, align 8
  %22 = load i64, i64* %8, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i64 @pte_pfn(i32 %23)
  %25 = add i64 %22, %24
  %26 = load i32, i32* %6, align 4
  %27 = call i64 @get_pfn(i64 %25, i32 %26)
  store i64 %27, i64* %7, align 8
  %28 = load i64, i64* %7, align 8
  %29 = icmp eq i64 %28, -1
  br i1 %29, label %30, label %35

30:                                               ; preds = %3
  %31 = load %struct.lg_cpu*, %struct.lg_cpu** %4, align 8
  %32 = load i32, i32* %5, align 4
  %33 = call i64 @pte_pfn(i32 %32)
  %34 = call i32 @kill_guest(%struct.lg_cpu* %31, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %33)
  store i64 0, i64* %9, align 8
  br label %35

35:                                               ; preds = %30, %3
  %36 = load i64, i64* %7, align 8
  %37 = load i64, i64* %9, align 8
  %38 = call i32 @__pgprot(i64 %37)
  %39 = call i32 @pfn_pte(i64 %36, i32 %38)
  ret i32 %39
}

declare dso_local i64 @pte_flags(i32) #1

declare dso_local i64 @get_pfn(i64, i32) #1

declare dso_local i64 @pte_pfn(i32) #1

declare dso_local i32 @kill_guest(%struct.lg_cpu*, i8*, i64) #1

declare dso_local i32 @pfn_pte(i64, i32) #1

declare dso_local i32 @__pgprot(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
